--- a/index.html
+++ b/index.html
@@ -116,24 +116,10 @@
 		<div v-show="shopCart" id="cartContainer" class="container-fluid fixed-top ">
 			<div :class="{cart : shopCart}">
 				<!-- cart item -->
-				<shopping-cart-items></shopping-cart-items>
-				<!-- <div v-for="selectedVariant in selectedVariants"
-					class="cart-item d-flex justify-content-between text-capitalize my-3">
-					<img src="#" class="img-fluid rounded-circle" id="item-img" alt="">
-
-					<div class="item-text">
-						<p id="cart-item-title" class="font-weight-bold mb-0">{{ name }}</p>
-						<span>€</span>
-						<span id="cart-item-price" class="cart-item-price" class="mb-0">{{ price}}</span>
-					</div>
-
-					<a href="#" id='cart-item-remove' class="cart-item-remove">
-						<i @click="removeItemFromCart(fruit[0])" class="fas fa-trash"></i>
-					</a>
-				</div>
-
-				<P>Aantal producten in mandje: {{ cart }}</P> -->
-				<!--end of  cart item -->
+				<shopping-cart-items ></shopping-cart-items>
+				
+				<P>Aantal producten in mandje: {{ cart }}</P>
+				<!-- end cart item-->
 
 				<!-- cart total -->
 				<div class="cart-total-container d-flex justify-content-around text-capitalize mt-5">
@@ -179,7 +165,7 @@
 		<div id="allItems">
 			<section id="form-container" class="itemsFirstRow">
 				<div class="container">
-					<products></products>
+					<products @add-to-cart="updateCart"></products>
 				</div>
 			</section>
 		</div>
