items in cart with id

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 				<!-- cart item -->
 				<shopping-cart-items ></shopping-cart-items>
 				
-				<P>Aantal producten in mandje: {{ cart }}</P>
+				<P>Aantal producten in mandje: {{ cart.length }}</P>
 				<!-- end cart item-->
 
 				<!-- cart total -->
