--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<script src="/assets/js/config.js"></script>
 
 	<script src="/assets/js/fruits.js"></script>
-	<script src="/assets/js/components/shopping-cart-items.js"></script>
+
 	<script src="/assets/js/components/products.js"></script>
 </head>
 
@@ -116,9 +116,25 @@
 		<div v-show="shopCart" id="cartContainer" class="container-fluid fixed-top ">
 			<div :class="{cart : shopCart}">
 				<!-- cart item -->
-				<shopping-cart-items ></shopping-cart-items>
+				<div>
+					<div v-for="cart in carts"
+						class="cart-item d-flex justify-content-between text-capitalize my-3">
+						<img src="#" class="img-fluid rounded-circle" id="item-img" alt="">
+			
+						<div class="item-text">
+							<p id="cart-item-title" class="font-weight-bold mb-0">{{ cart.name }}</p>
+							<span>€</span>
+							<span id="cart-item-price" class="cart-item-price mb-0">{{ cart.price }}</span>
+						 </div>
+			
+						<a href="#" id='cart-item-remove' class="cart-item-remove">
+							<i @click="removeItemFromCart(fruit[0])" class="fas fa-trash"></i>
+						</a>
+					</div>
+					
+				</div>
 				
-				<P>Aantal producten in mandje: {{ cart.length }}</P>
+				<P >Aantal producten in mandje: {{ cart.length }}</P>
 				<!-- end cart item-->
 
 				<!-- cart total -->
@@ -165,7 +181,7 @@
 		<div id="allItems">
 			<section id="form-container" class="itemsFirstRow">
 				<div class="container">
-					<products @add-to-cart="updateCart"></products>
+					<products @add-to-cart="updateCart" ></products>
 				</div>
 			</section>
 		</div>
