remove item from cart

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 						</div>
 
 						<a href="#" id='cart-item-remove' class="cart-item-remove">
-							<i @click="removeItemFromCart(fruit[0])" class="fas fa-trash"></i>
+							<i @click="removeItemFromCart(cart[0])" class="fas fa-trash"></i>
 						</a>
 					</div>
 
