--- a/index.html
+++ b/index.html
@@ -139,17 +139,16 @@
 				<!-- cart total -->
 				<div class="cart-total-container d-flex justify-content-around text-capitalize mt-5">
 					<h5></h5>
-					<h5> € <strong id="cart-total" class="font-weight-bold"></strong> 
-						{{ this.prices.reduce(function
-						sumOf(acc, curr) {
-						acc = acc + curr
-						return acc
-						}, 0) }}</h5>
+					<h5> € <strong id="cart-total" class="font-weight-bold"></strong> Totale prijs:
+						{{ this.prices.reduce(function sumOf(acc, curr) {
+							acc = acc + curr
+							return acc
+						}, 0)  }}</h5>
 				</div>
 				<!--end cart total -->
 				<!-- cart buttons -->
 				<div class="cart-buttons-container mt-3 d-flex justify-content-between">
-					<a href="#" id="clear-cart" class="btn btn-outline-secondary btn-black text-uppercase">Verder
+					<a @click="closeCart" href="#allItems" id="clear-cart" class="btn btn-outline-secondary btn-black text-uppercase">Verder
 						Winkelen</a>
 					<a href="#" class="btn btn-outline-secondary text-uppercase btn-pink">Bestellen</a>
 				</div>
