--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
 		crossorigin="anonymous"></script>
 	<!-- end script color change nav-bar -->
-
+	
+	<script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="/node_modules/vue/dist/vue.js"></script>
 
 	<script src="/assets/js/config.js"></script>
@@ -140,10 +141,7 @@
 				<div class="cart-total-container d-flex justify-content-around text-capitalize mt-5">
 					<h5></h5>
 					<h5> € <strong id="cart-total" class="font-weight-bold"></strong> Totale prijs:
-						{{ this.prices.reduce(function sumOf(acc, curr) {
-							acc = acc + curr
-							return acc
-						}, 0)  }}</h5>
+						{{ totalPrice  }}</h5>
 				</div>
 				<!--end cart total -->
 				<!-- cart buttons -->
